--- a/css/dish.css
+++ b/css/dish.css
@@ -559,6 +559,7 @@ background-color: rgb(192, 181, 181);
 
     .suggestions .card-body p {
         font-size: 0.85rem;
+        height: 100%;
     }
 
     .suggestions .card-body .btn {
